[tool.poetry]
name = "jupiter"
version = "0.1.0"
description = "Seismology tools."
authors = ["OUCyf <fy21@rice.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
scipy = "^1.9.3"
numba = "^0.56.4"
matplotlib = "^3.6.2"
ray = "^2.1.0"



[tool.poetry.group.dev.dependencies]
coverage = "^6.3.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
